# piwars_2024_disasterzone

./: .env_example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  bus_architecture.md  fabfile.py  inventory.py  pyproject.toml
.github/: dependabot.yml
adafruit_crickit/: install_tasks.py  notes.md  robot.py
adafruit_stepper_motor_hat/: install_tasks.py  robot.py
deploy/: apt_update.py  deploy.py  deploy_common_environment.py  deploy_services.py  install_base.py  install_board.py  install_mqtt.py  install_web.py  prepare_hotspot.py  robot_mosquitto.conf  service_template.j2  update_code.py  update_common.py
deploy/helpers/: mpremote_tools.py  pip_helper.py  python_service.j2  python_service.py
deployment/: deploy.py  poweroff.py  query_i2c.py  update_code.py
dfrobot_gravity/: install_tasks.py  robot.py
docs/: bus_architecture.md  folder_structure_and_deployment.md  wpa_supplicant.conf_example
drive_motors_service/: motors_service.py  readme.md  test_service.py
hardware/big_ole_yellow_kicad/: 4duino connections.fzz  (+5 more)
orion_disaster_app/: App.js  README.md  app.json  env.js  env.js.example  package-lock.json  package.json  styles.js
pimoroni_explorer_hat_pro/: install_tasks.py  robot.py
pimoroni_inventor_hat_mini/: install_tasks.py  robot.py
redrobotics_redboard/: robot.py
robot/: robot_settings.py  test_drive_pwm_range.py
robot_control/: App.js  README.md  app.json  env.js  login.js  package-lock.json  package.json  styles.js
src/: api.py  robot_settings.py  test_drive_pwm_range.py  test_robot.py  test_robot_directions.py
(+119 files in other folders)
