[tool.poetry]
name = "piwars-2024-disasterzone"
version = "0.1.0"
description = ""
authors = ["Danny Staple <danny@orionrobots.co.uk>", "Emma Seymour"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyinfra = "^3.2"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120